src/test/deca/context/valid/ContextAvecObjet/DeclFields/pubNproFields.deca
// Description:
//    Déclaration de champs de visibilité protected et public
//
// Resultats:
//    ok

class A {
    protected int x;
    float y = 1.0;
    protected boolean a;
}